--- a/purified/index.html
+++ b/purified/index.html
@@ -22,6 +22,12 @@
 
 <body>
 
+    <div class="preloader">
+
+        <div class="preloader__loader"></div>
+
+    </div>
+
     <div class="mobile">
 
         <ul class="mobile-navigation">
@@ -319,6 +325,7 @@
     <script>
 
         $(document).ready(function () {
+            $('.preloader').toggleClass('preloader--hidden');
             $('.header__top-mobile').click(function() {
                 $('.mobile').toggleClass('mobile--visible');
             });
