Added menu + scrolls

--- a/trbstn/index.html
+++ b/trbstn/index.html
@@ -8,6 +8,18 @@
   <link rel="stylesheet" href="./static/css/style.css">
 </head>
 <body>
+
+  <section class="t-menu">
+    <div class="t-container">
+      <nav class="t-nav t-menu__nav">
+        <ul>
+          <li><a href="#" class="t-nav__link animated-scroll">Трибестан</a></li>
+          <li><a href="#use" class="t-nav__link animated-scroll">Применение</a></li>
+          <li><a href="#video" class="t-nav__link animated-scroll">Презентация</a></li>
+        </ul>
+      </nav>
+    </div>
+  </section>
   
   <header class="t-header">
     <div class="t-container">
@@ -40,7 +52,7 @@
 
   <main class="t-main">
     <div class="t-container">
-      <section class="t-use t-main__use">
+      <section id="use" class="t-use t-main__use">
 
         <article class="t-use__article">
           <div class="t-use__text">
@@ -60,8 +72,8 @@
         </article>
       </section>
 
-      <section class="t-video t-main__video">
-        <div data-aos="fade-left" data-aos-duration="2000" class="t-video__container">
+      <section id="video" class="t-video t-main__video">
+        <div data-aos="fade-left" data-aos-duration="1500" class="t-video__container">
           <div class="t-video__preview"></div>
           <button class="t-play t-video__play">
             <i class="t-play__icon"></i>
