--- a/trbstn/index.html
+++ b/trbstn/index.html
@@ -51,6 +51,7 @@
   </header>
 
   <main class="t-main">
+    <div class="t-main__decor" data-aos="slide-up" data-aos-duration="1500"></div>
     <div class="t-container">
       <section id="use" class="t-use t-main__use">
 
