More work on site

--- a/trbstn/index.html
+++ b/trbstn/index.html
@@ -7,13 +7,18 @@
   <title>Лечение заболеваний - Трихуйстан</title>
   <link rel="stylesheet" href="./static/css/style.css">
 </head>
-<body>
+<body class="overflow">
+
+  <section class="t-preloader">
+    <div class="t-preloader__inner">
+      <div class="t-preloader__circle"></div>
+    </div>
+  </section>
 
   <section class="t-menu">
     <div class="t-container">
       <nav class="t-nav t-menu__nav">
         <ul>
-          <li><a href="#" class="t-nav__link animated-scroll">Трибестан</a></li>
           <li><a href="#use" class="t-nav__link animated-scroll">Применение</a></li>
           <li><a href="#video" class="t-nav__link animated-scroll">Презентация</a></li>
         </ul>
@@ -26,11 +31,11 @@
 
       <div class="t-header__top">
         <div class="t-header__logo">
-          <a href="http://pharmvisit.ru"></a>
+          <a href="http://pharmvisit.ru" target="_blank"></a>
         </div>
 
         <div class="t-header__logo t-header__logo_manufacturer">
-          <i></i>
+          <a href="http://www.sopharma.bg/ru/" target="_blank"><i></i></a>
         </div>
 
         <a href="#" class="t-header__sandwich"></a>
@@ -43,7 +48,7 @@
         </div>
         <div class="t-header__cta">
           <span>Лечение андрологических заболеваний</span>
-          <a href="#">Узнать больше</a>
+          <a href="#use" class="animate-scroll">Узнать больше</a>
         </div>
       </div>
 
@@ -61,7 +66,7 @@
             <small>Автор: Попов С.В.</small>
             <div>Всемирная организация здравоохранения определяет «репродуктивное здоровье» как отсутствие нарушений репродуктивных функций у мужчины и женщины, подразумевая физическое, психическое и социальное благополучие обоих партнеров [3]. Репродуктивное здоровье мужчины является предметом андрологии – обширного и бурно развивающегося направления медицинской науки. Центральными проблемами андрологии являются мужское бесплодие и эректильная дисфункция. Около 15% сексуально активных пар не достигают беременности в течение 1 года половой жизни без предохранения. В конечном итоге 5% пар остаются бездетными несмотря на предпринимаемые попытки лечения.</div>
           </div>
-          <div data-aos="fade-up" class="t-use__illustration"></div>
+          <div data-aos="fade-up" data-aos-offset="150" class="t-use__illustration"></div>
         </article>
 
         <article class="t-use__article t-use__article_paired">
@@ -69,7 +74,7 @@
             <div>Приблизительно у 50% бездетных пар бесплодие связано с «мужским фактором» – отклонениями в параметрах эякулята [4]. Причинами мужского бесплодия могут быть варикоцеле, урогенитальные инфекции, крипторхизм, расстройства семяизвержения и эрекции, эндокринные и генетические нарушения, а также иммунологические факторы [1,2,4,6]. Необходимо отметить, что в 30–40% этиологический фактор мужского бесплодия не выявляют. Для терапии мужского бесплодия применяется как комплексная консервативная терапия с использованием различных препаратов – антимикробных, противовоспалительных, гормональных, – так и оперативное вмешательство или их комбинация. Возрастание частоты заболеваний органов мужской репродуктивной системы, а также нейроэндокринных заболеваний определяет актуальность применения препаратов для восстановления мужской фертильности.</div>
             <a href="#"><span>читать дальше</span><i></i></a>
           </div>
-          <div data-aos="fade-up" class="t-use__illustration"></div>
+          <div data-aos="fade-up" data-aos-offset="150" class="t-use__illustration"></div>
         </article>
       </section>
 
