--- a/trbstn/index.html
+++ b/trbstn/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Лечение заболеваний - Трихуйстан</title>
+  <title>Лечение заболеваний - Трибестан</title>
   <link rel="stylesheet" href="./static/css/style.css">
 </head>
 <body class="overflow">
@@ -72,7 +72,7 @@
         <article class="t-use__article t-use__article_paired">
           <div class="t-use__text">
             <div>Приблизительно у 50% бездетных пар бесплодие связано с «мужским фактором» – отклонениями в параметрах эякулята [4]. Причинами мужского бесплодия могут быть варикоцеле, урогенитальные инфекции, крипторхизм, расстройства семяизвержения и эрекции, эндокринные и генетические нарушения, а также иммунологические факторы [1,2,4,6]. Необходимо отметить, что в 30–40% этиологический фактор мужского бесплодия не выявляют. Для терапии мужского бесплодия применяется как комплексная консервативная терапия с использованием различных препаратов – антимикробных, противовоспалительных, гормональных, – так и оперативное вмешательство или их комбинация. Возрастание частоты заболеваний органов мужской репродуктивной системы, а также нейроэндокринных заболеваний определяет актуальность применения препаратов для восстановления мужской фертильности.</div>
-            <a href="#"><span>читать дальше</span><i></i></a>
+            <a href="./static/pdf/sample.pdf"><span>читать дальше</span><i></i></a>
           </div>
           <div data-aos="fade-up" data-aos-offset="150" class="t-use__illustration"></div>
         </article>
@@ -99,7 +99,7 @@
         </div>
         <div class="t-video__descr">
           <span>Презентация препарата Трибестан</span>
-          <a href="#">скачать pdf</a>
+          <a href="./static/pdf/sample.pdf">скачать pdf</a>
         </div>
       </section>
     </div>
